jre 6 compatiblitity